Add events for category, account summary

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
         </div>
         <span>Category:</span>
         <select id="select__category" name="select__category">
-          <option value="select_category">Select category</option>
+          <option value="select_category" id="select_category">Select category</option>
           <option value="add_new_category">Add new category</option> 
         </select>
         <input type="text" id="input__category" style="display:none" />
@@ -63,7 +63,7 @@
       </form>
 
       <h2>Account summary</h2>
-      <ul></ul>
+      <ul id="summary"></ul>
       <span>Filter by account:</span>
       <select id="select__filter-account"></select>
       <br />
