--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
         <span>Category:</span>
         <select id="select__category" name="select__category">
           <option value="select_category" id="select_category">Select category</option>
-          <option value="add_new_category">Add new category</option> 
+          <option value="add_new_category" id="add_new_category">Add new category</option> 
         </select>
         <input type="text" id="input__category" style="display:none" />
         <button type="button" id="btn__add-category" style="display:none">Add new category</button>
