Update transaction table

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,6 +78,18 @@
           <th>From</th>
           <th>To</th>
         </tr>
+        <!-- delete later code below -->
+        <!-- <tr>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+        </tr> -->
+        <!-- delete later code above-->
       </table>
     </main>
     <script src="./js/helpers/Account.js"></script>
