Add css and modify account summary

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,16 +19,18 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <h1>myTrakr</h1>
+    <header>
+      <h1>myTrakr</h1>
+    </header>
     <main>
       <form action="" method="post">
-        <h2>New Account:</h2>
+        <h2>New Account</h2>
         <input type="text" id="input__account"/>
         <!-- <button id="btn__add-account">Add new account</button> -->
         <input type="submit" id="btn__add-account" value="Add new account">
       </form>
       <form action="">
-        <h2>New Transaction:</h2> 
+        <h2>New Transaction</h2> 
         <span>Deposit</span>
         <input type="radio" id="radio__deposit" name="transaction" value="radio__deposit" checked="checked"/>
         <span>Withdraw</span>
