--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>myTrakr</title>
+    <title>BANK OF AKAMA</title>
     <!-- jQuery file -->
     <script src="./js/vendors/jquery.js"></script>
     <!-- Bootstrap files -->
@@ -15,29 +15,32 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <!-- Font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <header>
-      <h1>myTrakr</h1>
+      <h1><i class="fa-solid fa-building-columns"></i> BANK OF AKAMA</h1>
     </header>
     <main>
-      <form action="" method="post">
-        <h2>New Account</h2>
+      <form action="" method="post" id="form__account">
+        <h2><i class="fa-solid fa-user"></i> New Account</h2>
         <input type="text" id="input__account"/>
         <!-- <button id="btn__add-account">Add new account</button> -->
         <input type="submit" id="btn__add-account" value="Add new account">
       </form>
-      <form action="">
-        <h2>New Transaction</h2> 
-        <span>Deposit</span>
-        <input type="radio" id="radio__deposit" name="transaction" value="radio__deposit" checked="checked"/>
-        <span>Withdraw</span>
-        <input type="radio" id="radio__withdraw" name="transaction" value="radio__withdraw"/>
-        <span>Transfer</span>
-        <input type="radio" id="radio__transfer" name="transaction" value="radio__transfer"/>
-        <br />
+      <form action="" id="form__transaction">
+        <h2><i class="fa-solid fa-sack-dollar"></i> New Transaction</h2> 
+        <div class="wrap__radio">
+          <span><i class="fa-solid fa-piggy-bank"></i> Deposit</span>
+          <input type="radio" id="radio__deposit" name="transaction" value="radio__deposit" checked="checked"/>
+          <span><i class="fa-solid fa-hand-holding-dollar"></i> Withdraw</span>
+          <input type="radio" id="radio__withdraw" name="transaction" value="radio__withdraw"/>
+          <span><i class="fa-solid fa-money-bill-transfer"></i> Transfer</span>
+          <input type="radio" id="radio__transfer" name="transaction" value="radio__transfer"/>
+        </div>
         <div id="account">
           <span>Account:</span>
           <select id="select__account"></select>
@@ -48,30 +51,35 @@
           <span>To:</span>
           <select id="select__to"></select>
         </div>
-        <span>Category:</span>
-        <select id="select__category" name="select__category">
-          <option value="select_category" id="select_category">Select category</option>
-          <option value="add_new_category" id="add_new_category">Add new category</option> 
-        </select>
-        <input type="text" id="input__category" style="display:none" />
-        <button type="button" id="btn__add-category" style="display:none">Add new category</button>
-        <br />
-        <span>Description</span>
-        <input type="text" id="input__description"/>
-        <br />
-        <span>Amount:</span>
-        <input type="number" id="input__amount"/>
-        <button id="btn__add-transaction">Add transaction</button>
+        <div class="wrap__category">
+          <span>Category:</span>
+          <select id="select__category" name="select__category">
+            <option value="select_category" id="select_category">Select category</option>
+            <option value="add_new_category" id="add_new_category">Add new category</option> 
+          </select>
+          <input type="text" id="input__category" style="display:none" />
+          <button type="button" id="btn__add-category" style="display:none">Add new category</button>
+          <!-- <br /> -->
+        </div>
+        <div class="wrap__description">
+          <span>Description:</span>
+          <input type="text" id="input__description"/>
+          <!-- <br /> -->
+        </div>
+        <div class="wrap__amount"> 
+          <span>Amount:</span>
+          <input type="number" id="input__amount"/>
+          <button id="btn__add-transaction">Add transaction</button>
+        </div>
       </form>
 
-      <h2>Account summary</h2>
+      <h2><i class="fa-solid fa-receipt"></i> Account summary</h2>
       <ul id="summary"></ul>
       <span>Filter by account:</span>
       <select id="select__filter-account">
         <option value="filter_select" id="filter_select">Select account</option>
         <option value="filter__clearall" id="filter_clearall">*Clear all list</option>
       </select>
-      <br />
       <table>
         <tr id="tr__base">
           <th>Id</th>
