--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,8 +15,21 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/index.css" />
   </head>
@@ -25,27 +38,46 @@
       <h1><i class="fa-solid fa-building-columns"></i> BANK OF AKAMA</h1>
     </header>
     <main>
+      <section class="hero">
+        <h2 class="title__hero">The safest online banking, trust me.</h2>
+      </section>
       <form action="" method="post" id="form__account">
         <h2><i class="fa-solid fa-user"></i> New Account</h2>
-        <input type="text" id="input__account"/>
+        <input type="text" id="input__account" />
         <!-- <button id="btn__add-account">Add new account</button> -->
-        <input type="submit" id="btn__add-account" value="Add new account">
+        <input type="submit" id="btn__add-account" value="Add new account" />
       </form>
       <form action="" id="form__transaction">
-        <h2><i class="fa-solid fa-sack-dollar"></i> New Transaction</h2> 
+        <h2><i class="fa-solid fa-sack-dollar"></i> New Transaction</h2>
         <div class="wrap__radio">
           <span><i class="fa-solid fa-piggy-bank"></i> Deposit</span>
-          <input type="radio" id="radio__deposit" name="transaction" value="radio__deposit" checked="checked"/>
+          <input
+            type="radio"
+            id="radio__deposit"
+            name="transaction"
+            value="radio__deposit"
+            checked="checked"
+          />
           <span><i class="fa-solid fa-hand-holding-dollar"></i> Withdraw</span>
-          <input type="radio" id="radio__withdraw" name="transaction" value="radio__withdraw"/>
+          <input
+            type="radio"
+            id="radio__withdraw"
+            name="transaction"
+            value="radio__withdraw"
+          />
           <span><i class="fa-solid fa-money-bill-transfer"></i> Transfer</span>
-          <input type="radio" id="radio__transfer" name="transaction" value="radio__transfer"/>
+          <input
+            type="radio"
+            id="radio__transfer"
+            name="transaction"
+            value="radio__transfer"
+          />
         </div>
         <div id="account">
           <span>Account:</span>
           <select id="select__account"></select>
         </div>
-        <div id="from_to" style="display:none">
+        <div id="from_to" style="display: none">
           <span>From:</span>
           <select id="select__from"></select>
           <span>To:</span>
@@ -54,21 +86,27 @@
         <div class="wrap__category">
           <span>Category:</span>
           <select id="select__category" name="select__category">
-            <option value="select_category" id="select_category">Select category</option>
-            <option value="add_new_category" id="add_new_category">Add new category</option> 
+            <option value="select_category" id="select_category">
+              Select category
+            </option>
+            <option value="add_new_category" id="add_new_category">
+              Add new category
+            </option>
           </select>
-          <input type="text" id="input__category" style="display:none" />
-          <button type="button" id="btn__add-category" style="display:none">Add new category</button>
+          <input type="text" id="input__category" style="display: none" />
+          <button type="button" id="btn__add-category" style="display: none">
+            Add new category
+          </button>
           <!-- <br /> -->
         </div>
         <div class="wrap__description">
           <span>Description:</span>
-          <input type="text" id="input__description"/>
+          <input type="text" id="input__description" />
           <!-- <br /> -->
         </div>
-        <div class="wrap__amount"> 
+        <div class="wrap__amount">
           <span>Amount:</span>
-          <input type="number" id="input__amount"/>
+          <input type="number" id="input__amount" />
           <button id="btn__add-transaction">Add transaction</button>
         </div>
       </form>
@@ -78,7 +116,9 @@
       <span>Filter by account:</span>
       <select id="select__filter-account">
         <option value="filter_select" id="filter_select">Select account</option>
-        <option value="filter__clearall" id="filter_clearall">*Clear all list</option>
+        <option value="filter__clearall" id="filter_clearall">
+          *Clear all list
+        </option>
       </select>
       <table>
         <tr id="tr__base">
